third commit for created Action Section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,28 @@
             </nav>
         </section>
         <section class="header-s2 size">
-            <h1>Cool Dark UI Template for<br>Webflow Agencies!</h1>
+            <h1 class="dark-color">Cool Dark UI Template for<br>Webflow Agencies!</h1>
             <button class="btn">Stay Focused</button>
         </section>
     </header>
-    <main></main>
+
+    <main class="size">
+        <section class="main-s1">
+            <div class="s1-div-items">
+                <div class="div-item">
+                    <h1 class="dark-color">See It in Action</h1>
+                    <p class="dark-color">Explore the live preview and imagine your<br>brand in this bold new look.</p>
+                    <button class="btn">Launch Live Preview</button>
+                </div>
+                <img class="img1" src="/Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+        <section class="main-s2"></section>
+        <section class="main-s3"></section>
+        <section class="main-s4"></section>
+        <section class="main-s5"></section>
+    </main>
+
     <footer></footer>
 </body>
 
