fourth commit for created Productive Users Section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
                 <img class="img1" src="/Assets/wc-mini.png" alt="">
             </div>
         </section>
-        <section class="main-s2"></section>
+        <section class="main-s2">
+            <div class="productive-action-box">
+                <h2 class="dark-color">Joined Thousands of Productive Users</h2>
+                <div class="s2-div-items">
+                    <div class="div-item">
+                        <h1 class="p primary-color inter-normal">50K</h1>
+                        <p class="q dark-color">Active Users</p>
+                    </div>
+                    <div class="div-item">
+                        <h1 class="p primary-color inter-normal">2M+</h1>
+                        <p class="q dark-color">Focus Sessions</p>
+                    </div>
+                    <div class="div-item">
+                        <h1 class="p primary-color inter-normal">95%</h1>
+                        <p class="q dark-color">Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="main-s3"></section>
         <section class="main-s4"></section>
         <section class="main-s5"></section>
