fiveth commit for Users Feedback Section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body class="raleway-normal">
+<body class="raleway-normal bgc">
     <header>
         <section class="header-s1 size">
             <nav class="nav">
@@ -43,7 +43,7 @@
         </section>
         <section class="main-s2">
             <div class="productive-action-box">
-                <h2 class="dark-color">Joined Thousands of Productive Users</h2>
+                <h2 class="tit dark-color">Joined Thousands of Productive Users</h2>
                 <div class="s2-div-items">
                     <div class="div-item">
                         <h1 class="p primary-color inter-normal">50K</h1>
@@ -60,7 +60,65 @@
                 </div>
             </div>
         </section>
-        <section class="main-s3"></section>
+        <section class="main-s3">
+            <h2 class="tit dark-color">What our users say</h2>
+            <div class="s3-div-items">
+                <div class="s3-div-box">
+                    <div class="star-div">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h3 class="dark-color">Loved by Designers</h3>
+                    <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="div-user">
+                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <div class="user-info">
+                            <p class="py dark-color">Reviewer name</p>
+                            <p class="pz dark-color">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="s3-div-box">
+                    <div class="star-div">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h3 class="dark-color">Loved by Designers</h3>
+                    <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="div-user">
+                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <div class="user-info">
+                            <p class="py dark-color">Reviewer name</p>
+                            <p class="pz dark-color">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="s3-div-box">
+                    <div class="star-div">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h3 class="dark-color">Loved by Designers</h3>
+                    <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="div-user">
+                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <div class="user-info">
+                            <p class="py dark-color">Reviewer name</p>
+                            <p class="pz dark-color">Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="main-s4"></section>
         <section class="main-s5"></section>
     </main>
