sixth commit for focus batter Section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,14 @@
                 </div>
             </div>
         </section>
-        <section class="main-s4"></section>
+        <section class="main-s4">
+            <div class="s4-div">
+                <h1>Ready to focus better</h1>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn">Get Started Free</button>
+                <img src="/Assets/wc-big.png" alt="">
+            </div>
+        </section>
         <section class="main-s5"></section>
     </main>
 
