seventh commit for Get In Touch Section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,23 @@
                 <img src="/Assets/wc-big.png" alt="">
             </div>
         </section>
-        <section class="main-s5"></section>
+        <section class="main-s5">
+            <div class="s5-div-items">
+                <h1 class="f-tit dark-color">Let’s Get in<br>Touch</h1>
+                <form class="form-data">
+                    <label for="em" class="lab inter-normal dark-color">Email</label>
+                    <input type="email" id="em" placeholder="example@email.com" class="inp">
+
+                    <label for="tx" class="lab inter-normal dark-color">Name</label>
+                    <input type="text" id="tx" placeholder="full name" class="inp">
+
+                    <label for="fs" class="lab inter-normal dark-color">Message</label>
+                    <textarea name="" id="fs" class="inp" rows="4" placeholder="write your message..."></textarea>
+                    
+                    <input type="submit" value="Get in Touch" class="btn smt">
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
