--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -145,8 +141,17 @@
             </div>
         </section>
     </main>
-
-    <footer></footer>
+    <footer>
+        <div class="footer-bg">
+            <h1 class="ft primary-color inter-normal">LOGO</h1>
+            <p class="dark-color fp">Ready to elevate your online presence? Contact us today to discuss<br>your project and discover how we can bring your vision to life.</p>
+            <ul class="fp ul">
+                <li><a class="dark-color" href="">Home</a></li>
+                <li><a class="dark-color" href="">About</a></li>
+                <li><a class="dark-color" href="">How it Works</a></li>
+                <li><a class="dark-color" href="">Services</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
-
 </html>
