final commit for everything

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         </section>
         <section class="main-s4">
             <div class="s4-div">
-                <h1>Ready to focus better</h1>
-                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <h1 class="dark-color">Ready to focus better</h1>
+                <p class="dark-color">This template instantly leveled up our presence.” – Studio Vertex</p>
                 <button class="btn">Get Started Free</button>
                 <img src="/Assets/wc-big.png" alt="">
             </div>
