image bug fixed

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h1 class="dark-color">Ready to focus better</h1>
                 <p class="dark-color">This template instantly leveled up our presence.” – Studio Vertex</p>
                 <button class="btn">Get Started Free</button>
-                <img src="/Assets/wc-big.png" alt="">
+                <img src="./Assets/wc-big.png" alt="">
             </div>
         </section>
         <section class="main-s5">
