--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p class="dark-color">Explore the live preview and imagine your<br>brand in this bold new look.</p>
                     <button class="btn">Launch Live Preview</button>
                 </div>
-                <img class="img1" src="/Assets/wc-mini.png" alt="">
+                <img class="img1" src="./Assets/wc-mini.png" alt="">
             </div>
         </section>
         <section class="main-s2">
@@ -61,16 +61,16 @@
             <div class="s3-div-items">
                 <div class="s3-div-box">
                     <div class="star-div">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="star">
+                        <img src="./Assets/icon-star.png" alt="star">
+                        <img src="./Assets/icon-star.png" alt="star">
+                        <img src="./Assets/icon-star.png" alt="star">
+                        <img src="./Assets/icon-star.png" alt="star">
                     </div>
                     <h3 class="dark-color">Loved by Designers</h3>
                     <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="div-user">
-                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <img class="avatar" src="./Assets/avatar.png" alt="logo">
                         <div class="user-info">
                             <p class="py dark-color">Reviewer name</p>
                             <p class="pz dark-color">Date</p>
