final v3 commit for everything

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
                 </div>
                 <div class="s3-div-box">
                     <div class="star-div">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
                     </div>
                     <h3 class="dark-color">Loved by Designers</h3>
                     <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="div-user">
-                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <img class="avatar" src="./Assets/avatar.png" alt="">
                         <div class="user-info">
                             <p class="py dark-color">Reviewer name</p>
                             <p class="pz dark-color">Date</p>
@@ -97,16 +97,16 @@
                 </div>
                 <div class="s3-div-box">
                     <div class="star-div">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
-                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
                     </div>
                     <h3 class="dark-color">Loved by Designers</h3>
                     <p class="dark-color px">This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="div-user">
-                        <img class="avatar" src="/Assets/avatar.png" alt="">
+                        <img class="avatar" src="./Assets/avatar.png" alt="">
                         <div class="user-info">
                             <p class="py dark-color">Reviewer name</p>
                             <p class="pz dark-color">Date</p>
